# Research-

./: README.md  apple_find_duplicates.ipynb  apple_week1.ipynb  apple_week2.ipynb  apple_week3.ipynb  final_function_tue_thu.ipynb  pyproject.toml  suppor_and_resistance.ipynb
aapl_pipeline/: __init__.py  baselines.py  comparator.py  config.py  data_loader.py  feature_calculator.py  modeller.py  monte_carlo.py  performance_metric.py  pipeline.py  rolling_model.py  weekly_builder.py
notebooks/: exploration.ipynb  run_pipeline.ipynb
